DerAL/src/DerALParser.java
// Generated from DerAL.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DerALParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Int=2, Unsigned=3, Char=4, Double=5, Bool=6, Void=7, String=8, 
		Begin=9, For=10, While=11, If=12, Else=13, Break=14, Continue=15, Return=16, 
		Class=17, Def=18, Dec=19, Extern=20, New=21, Delete=22, Set=23, LeftParenthesis=24, 
		RightParenthesis=25, LeftBracket=26, RightBracket=27, LeftBrace=28, RightBrace=29, 
		Semicolon=30, Equal=31, NotEqual=32, PlusAssign=33, MinusAssign=34, StarAssign=35, 
		DivAssign=36, Assign=37, ModAssign=38, LessEqual=39, GreaterEqual=40, 
		And=41, Or=42, Not=43, Less=44, Greater=45, Plus=46, Minus=47, Star=48, 
		Div=49, Mod=50, Identifier=51, BoolConstatnt=52, DoubleConstant=53, IntegerConstant=54, 
		CharConstant=55, StringConstant=56, Newline=57, Whitespace=58, LineComment=59, 
		BlockComment=60;
	public static final int
		RULE_sourceCode = 0, RULE_declarations = 1, RULE_mainProgram = 2, RULE_statements = 3, 
		RULE_declaration = 4, RULE_statement = 5, RULE_loopStatement = 6, RULE_loopCheckStatement = 7, 
		RULE_forInitStatement = 8, RULE_forLoopStatement = 9, RULE_condStatement = 10, 
		RULE_assignment = 11, RULE_compoundStatement = 12, RULE_typeSpecification = 13, 
		RULE_variableDeclaration = 14, RULE_functionExternDeclaration = 15, RULE_functionForwardDeclaration = 16, 
		RULE_functionDefinition = 17, RULE_definitionArgsList = 18, RULE_definitionArgSpecification = 19, 
		RULE_functionBody = 20, RULE_expression = 21, RULE_argListFuncCall = 22, 
		RULE_arrayIndex = 23, RULE_typeName = 24;
	public static final String[] ruleNames = {
		"sourceCode", "declarations", "mainProgram", "statements", "declaration", 
		"statement", "loopStatement", "loopCheckStatement", "forInitStatement", 
		"forLoopStatement", "condStatement", "assignment", "compoundStatement", 
		"typeSpecification", "variableDeclaration", "functionExternDeclaration", 
		"functionForwardDeclaration", "functionDefinition", "definitionArgsList", 
		"definitionArgSpecification", "functionBody", "expression", "argListFuncCall", 
		"arrayIndex", "typeName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'cele'", "'prirodzene'", "'znak'", "'realne'", "'bool'", 
		"'nist'", "'retazec'", "'ZACATEK'", "'dokolecka'", "'dokedy'", "'ak'", 
		"'inac'", "'prerus'", "'pokracuj'", "'vrac'", "'treda'", "'def'", "'slubujem'", 
		"'cudza'", "'novy'", "'zmaz'", "'mnozina'", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "';'", "'=='", "'!='", "'+='", "'-='", "'*='", "'/='", "'='", 
		"'%='", "'<='", "'>='", "'&&'", "'||'", "'!'", "'<'", "'>'", "'+'", "'-'", 
		"'*'", "'/'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "Int", "Unsigned", "Char", "Double", "Bool", "Void", "String", 
		"Begin", "For", "While", "If", "Else", "Break", "Continue", "Return", 
		"Class", "Def", "Dec", "Extern", "New", "Delete", "Set", "LeftParenthesis", 
		"RightParenthesis", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
		"Semicolon", "Equal", "NotEqual", "PlusAssign", "MinusAssign", "StarAssign", 
		"DivAssign", "Assign", "ModAssign", "LessEqual", "GreaterEqual", "And", 
		"Or", "Not", "Less", "Greater", "Plus", "Minus", "Star", "Div", "Mod", 
		"Identifier", "BoolConstatnt", "DoubleConstant", "IntegerConstant", "CharConstant", 
		"StringConstant", "Newline", "Whitespace", "LineComment", "BlockComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DerAL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DerALParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceCodeContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode Begin() { return getToken(DerALParser.Begin, 0); }
		public TerminalNode Newline() { return getToken(DerALParser.Newline, 0); }
		public MainProgramContext mainProgram() {
			return getRuleContext(MainProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DerALParser.EOF, 0); }
		public SourceCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitSourceCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceCodeContext sourceCode() throws RecognitionException {
		SourceCodeContext _localctx = new SourceCodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			declarations();
			setState(51);
			match(Begin);
			setState(52);
			match(Newline);
			setState(53);
			mainProgram();
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> Newline() { return getTokens(DerALParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(DerALParser.Newline, i);
		}
		public List<TerminalNode> BlockComment() { return getTokens(DerALParser.BlockComment); }
		public TerminalNode BlockComment(int i) {
			return getToken(DerALParser.BlockComment, i);
		}
		public List<TerminalNode> LineComment() { return getTokens(DerALParser.LineComment); }
		public TerminalNode LineComment(int i) {
			return getToken(DerALParser.LineComment, i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Unsigned) | (1L << Char) | (1L << Double) | (1L << Bool) | (1L << Void) | (1L << String) | (1L << Def) | (1L << Dec) | (1L << Extern) | (1L << Semicolon) | (1L << Newline) | (1L << LineComment) | (1L << BlockComment))) != 0)) {
				{
				setState(60);
				switch (_input.LA(1)) {
				case Int:
				case Unsigned:
				case Char:
				case Double:
				case Bool:
				case Void:
				case String:
				case Def:
				case Dec:
				case Extern:
				case Semicolon:
					{
					setState(56);
					declaration();
					}
					break;
				case Newline:
					{
					setState(57);
					match(Newline);
					}
					break;
				case BlockComment:
					{
					setState(58);
					match(BlockComment);
					}
					break;
				case LineComment:
					{
					setState(59);
					match(LineComment);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainProgramContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public MainProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainProgram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitMainProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainProgramContext mainProgram() throws RecognitionException {
		MainProgramContext _localctx = new MainProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainProgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> Newline() { return getTokens(DerALParser.Newline); }
		public TerminalNode Newline(int i) {
			return getToken(DerALParser.Newline, i);
		}
		public List<TerminalNode> BlockComment() { return getTokens(DerALParser.BlockComment); }
		public TerminalNode BlockComment(int i) {
			return getToken(DerALParser.BlockComment, i);
		}
		public List<TerminalNode> LineComment() { return getTokens(DerALParser.LineComment); }
		public TerminalNode LineComment(int i) {
			return getToken(DerALParser.LineComment, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Unsigned) | (1L << Char) | (1L << Double) | (1L << Bool) | (1L << Void) | (1L << String) | (1L << For) | (1L << While) | (1L << If) | (1L << Return) | (1L << LeftParenthesis) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Semicolon) | (1L << Not) | (1L << Minus) | (1L << Identifier) | (1L << BoolConstatnt) | (1L << DoubleConstant) | (1L << IntegerConstant) | (1L << CharConstant) | (1L << StringConstant) | (1L << Newline) | (1L << LineComment) | (1L << BlockComment))) != 0)) {
				{
				setState(71);
				switch (_input.LA(1)) {
				case Int:
				case Unsigned:
				case Char:
				case Double:
				case Bool:
				case Void:
				case String:
				case For:
				case While:
				case If:
				case Return:
				case LeftParenthesis:
				case LeftBracket:
				case LeftBrace:
				case Semicolon:
				case Not:
				case Minus:
				case Identifier:
				case BoolConstatnt:
				case DoubleConstant:
				case IntegerConstant:
				case CharConstant:
				case StringConstant:
					{
					setState(67);
					statement();
					}
					break;
				case Newline:
					{
					setState(68);
					match(Newline);
					}
					break;
				case BlockComment:
					{
					setState(69);
					match(BlockComment);
					}
					break;
				case LineComment:
					{
					setState(70);
					match(LineComment);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationSemicolContext extends DeclarationContext {
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public DeclarationSemicolContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarationSemicol(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationGlobalVarContext extends DeclarationContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public DeclarationGlobalVarContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarationGlobalVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationFunctioDefinitionContext extends DeclarationContext {
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DeclarationFunctioDefinitionContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarationFunctioDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationFunctionForwardDeclarationContext extends DeclarationContext {
		public FunctionForwardDeclarationContext functionForwardDeclaration() {
			return getRuleContext(FunctionForwardDeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public DeclarationFunctionForwardDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarationFunctionForwardDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationFunctionExternContext extends DeclarationContext {
		public FunctionExternDeclarationContext functionExternDeclaration() {
			return getRuleContext(FunctionExternDeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public DeclarationFunctionExternContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitDeclarationFunctionExtern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(87);
			switch (_input.LA(1)) {
			case Def:
				_localctx = new DeclarationFunctioDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				functionDefinition();
				}
				break;
			case Dec:
				_localctx = new DeclarationFunctionForwardDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				functionForwardDeclaration();
				setState(78);
				match(Semicolon);
				}
				break;
			case Extern:
				_localctx = new DeclarationFunctionExternContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				functionExternDeclaration();
				setState(81);
				match(Semicolon);
				}
				break;
			case Int:
			case Unsigned:
			case Char:
			case Double:
			case Bool:
			case Void:
			case String:
				_localctx = new DeclarationGlobalVarContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				variableDeclaration();
				setState(84);
				match(Semicolon);
				}
				break;
			case Semicolon:
				_localctx = new DeclarationSemicolContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementVarDeclarationContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public StatementVarDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementCompoundContext extends StatementContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public StatementCompoundContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementCompound(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementAssignmentContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public StatementAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementReturnContext extends StatementContext {
		public TerminalNode Return() { return getToken(DerALParser.Return, 0); }
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementCondContext extends StatementContext {
		public CondStatementContext condStatement() {
			return getRuleContext(CondStatementContext.class,0);
		}
		public StatementCondContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementLoopContext extends StatementContext {
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public StatementLoopContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementSemicolContext extends StatementContext {
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public StatementSemicolContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementSemicol(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementExpressionContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(DerALParser.Semicolon, 0); }
		public StatementExpressionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DerALVisitor ) return ((DerALVisitor<? extends T>)visitor).visitStatementExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new StatementVarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				variableDeclaration();
				setState(90);
				match(Semicolon);
				}
				break;
			case 2:
				_localctx = new StatementAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				assignment();
				setState(93);
				match(Semicolon);
				}
				break;
			case 3:
				_localctx = new StatementLoopContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				loopStatement();
				}
				break;
			case 4:
				_localctx = new StatementCondContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				condStatement();
				}
				break;
			case 5:
				_localctx = new StatementReturnContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				match(Return);
				setState(99);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LeftParenthesis) | (1L << LeftBracket) | (1L << Not) | (1L << Minus) | (1L << Identifier) | (1L << BoolConstatnt) | (1L << DoubleConstant) | (1L << IntegerConstant) | (1L << CharConstant) | (1L << StringConstant))) != 0)) {
					{
					setState(98);
					expression(0);
					}
				}

				setState(101);
				match(Semicolon);
				}
				break;
			case 6:
				_localctx = new StatementCompoundContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				compoundStatement();
				}
				break;
			case 7:
				_localctx = new StatementExpressionContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(103);
				expression(0);
				setState(104);
				match(Semicolon);
				}
				break;
			case 8:
				_localctx = new StatementSemicolContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(106);
				match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
